--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flexclave_website",
+  "name": "pulsetech_website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "aos": "^3.0.0-beta.6",
-    "next": "15.1.7",
+    "next": "^16.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
